# bunyi-melayu

./: .prettierignore  README.md  package.json  vite.config.ts
.github/workflows/: build.yml  test.yml
src/: app.html  app.pcss
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/rajah/: +layout.svelte  +page.svelte  +page.ts  Table.svelte
src/routes/tatabunyi/: +page.svelte  +page.ts
static/: Bunyian.toml  Imbuhan.toml  Tatabunyi.toml
wasm-rs/: Cargo.toml  expanded.rs  modulize.js
wasm-rs/examples/: faker.rs  imbuhan.rs  phonotactic.rs  simple.rs
wasm-rs/onc/: Cargo.toml
wasm-rs/onc/src/: affixes.rs  lib.rs  phonotactics.rs
wasm-rs/onc/src/phonotactics/: mod.rs  tags.rs
wasm-rs/src/: functions.rs  imbuhan.rs  lib.rs  parser.rs  phonology.rs  phonotactics.rs
wasm-rs/src/phonotactics/: tags.rs
