[package]
name = "wasm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
itertools = "0.12.1"
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
toml = "0.8.11"
wasm-bindgen = { version = "0.2.92", features = ["serde"] }
