workspace = { members = ["onc"] }

[package]
name = "wasm-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.12.1"
lazy_static = { version = "1.4.0", optional = true }
onc = { version = "0.2.0", path = "onc" }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
toml = "0.8.11"
wasm-bindgen = { version = "0.2.92", features = ["serde"] }

[features]
lazystatic = ["dep:lazy_static"]
faker = ["onc/faker", "dep:rand"]

[[example]]
name = "imbuhan"
required-features = ["lazystatic"]

[[example]]
name = "faker"
required-features = ["faker"]
