[package]
name = "onc"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
nom = "7.1.3"
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
serde = { version = "1.0.197", features = ["derive"] }

[features]
faker = ["dep:rand", "dep:rand_chacha"]
serde = []
